# Workout-App

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  prettier.config.js
.husky/: pre-commit
server/: .dockerignore  Dockerfile  alembic.ini  conftest.py  makefile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2025_12_12_1847-1e5e7084d968_create_user_table.py  2025_12_13_0947-1eac280a80f9_update_user_table_create_other_tables.py  2025_12_15_1709-1e1a6b37847d_update_models_for_auth.py
server/app/: __init__.py  main.py
server/app/api/: router.py
server/app/api/endpoints/: admin.py  auth.py  feedback.py  health.py  user.py
server/app/core/: config.py  dependencies.py  handlers.py  logging.py  security.py
server/app/migrations/: env.py
server/app/migrations/versions/: 2025_12_12_1847-1e5e7084d968_create_user_table.py  2025_12_13_0947-1eac280a80f9_update_user_table_create_other_tables.py  2025_12_13_1016-c97f0fb64caa_seed_muscle_groups.py  2025_12_13_2118-e42a259d7b17_allow_user_generated_exercises.py  2025_12_15_1709-1e1a6b37847d_update_models_for_auth.py  2025_12_22_1054-b38ada12f56b_seed_admin_user.py  (+7 more)
server/app/models/: __init__.py  access_request.py  api.py  enums.py  errors.py  exercise.py  muscle_group.py  registration_token.py  set.py  user.py  workout.py  workout_exercise.py
server/app/services/: admin.py  auth.py  email.py  feedback.py  github.py
server/app/tests/: test_email.py  test_health.py
server/app/utilities/: date.py
server/tests/: test_health.py
(+136 files in other folders)
