[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic[tz]>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.4",
    "greenlet>=3.3.0",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.9"]
